Fixed boxes
it was way too large

--- a/main/static/main/main.css
+++ b/main/static/main/main.css
@@ -65,6 +65,17 @@ ul.topnav li.right {float: right;}
   width: auto;
 }
 
+#box2 {
+    padding: 30px;
+  background: palevioletred;
+  color: white;
+  font-size: 15px;
+  border: 2px solid black;
+  border-radius: 10px;
+  margin-top: 25%;
+  width: auto;
+}
+
 #event_title {
 
 }
